# ops-cv

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  QUICKSTART.md  QUICKSTART_CloudDevelop.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh  requirements.txt  version.cmake  version.info
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
.gitcode/scripts/: compile.sh  pre_smoke.sh  update_image.sh  ut.sh
.gitcode/workflows/: codecheck_action.yml  compile_action.yml  ops-cv_action.yml  staticcheck_action.yml  ut_action.yml
cmake/: aclnn_ops_cv.h.in  dependencies.cmake  fetch_cann_cmake.cmake  func.cmake  gen_ops_info.cmake  intf_pub_linux.cmake  intf_pub_llt_gccnative.cmake  makeself_built_in.cmake  makeself_custom.cmake  opbuild.cmake  package.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
cmake/modules/: FindOPBASE.cmake  FindPython.cmake  Findaicpu.cmake  Finddlog.cmake  Findjson.cmake  Findmetadef.cmake  Findnnopbase.cmake  Findplatform.cmake  Findruntime.cmake  Findsecurec.cmake  Findtilingapi.cmake
common/: CMakeLists.txt
common/stub/: CMakeLists.txt  opapi_stub.cpp
common/stub/inc/framework/: stub_ops.h
common/stub/op_api/: aclnn_util.h
common/stub/op_api/aclnn_kernels/: contiguous.h  slice.h  transdata.h
common/stub/op_api/aclnn_kernels/common/: op_error_check.h
common/stub/op_api/level0/: concat.h  fill.h  squeeze.h  unsqueeze.h
common/stub/op_graph/: CMakeLists.txt  math_proto_stub.cpp
docs/: CONTRIBUTING_DOCS.md  QUICKSTART.md  README.md  op_api_list.md  op_list.md
docs/context/: aicore_develop_guide.md  aicpu_develop_guide.md  broadcast关系.md  build.md  commercial_release.md  dir_structure.md  op_api_list.md  op_debug_prof.md  op_list.md  quick_install.md  quick_op_invocation.md  编译与运行样例.md
docs/debug/: op_debug_prof.md
docs/develop/: aicore_develop_guide.md  aicpu_develop_guide.md  graph_develop_guide.md
docs/en/: op_api_list_en.md
docs/invocation/: commercial_release.md  op_invocation.md  quick_op_invocation.md
docs/zh/: menu_aclnn_api.md  op_api_list.md  op_list.md
examples/: CMakeLists.txt  README.md
examples/add_example/: README.md
examples/add_example_aicpu/: README.md
examples/fast_kernel_launch_example/: CMakeLists.txt  README.md  requirements.txt  setup.py
image/: CMakeLists.txt
image/adjust_saturation/: CMakeLists.txt  README.md
image/aipp/: CMakeLists.txt  README.md
image/col2im/: CMakeLists.txt  README.md
image/crop_and_resize/: CMakeLists.txt  README.md
image/deformable_offsets/: CMakeLists.txt  README.md
image/extract_glimpse_v2/: README.md  (+1 more)
image/upsample_bicubic2d/: CMakeLists.txt  README.md
image/upsample_bicubic2d/docs/: aclnnUpsampleBicubic2d.md  aclnnUpsampleBicubic2d_en.md
image/upsample_bicubic2d/examples/: test_aclnn_upsample_bicubic2d.cpp
image/upsample_bicubic2d/op_graph/: CMakeLists.txt
image/upsample_bicubic2d/op_host/: CMakeLists.txt  upsample_bicubic2d_def.cpp  upsample_bicubic2d_tiling.cpp  upsample_bicubic2d_tiling.h  upsample_bicubic2d_tiling_arch35.cpp
image/upsample_bicubic2d/op_host/config/ascend310b/: upsample_bicubic2d_binary.json
image/upsample_bicubic2d/op_host/config/ascend910_93/: upsample_bicubic2d_simplified_key.ini
image/upsample_bicubic2d/op_host/config/ascend910_95/: upsample_bicubic2d_binary.json
image/upsample_bicubic2d/op_host/op_api/: aclnn_upsample_bicubic_2d.cpp  aclnn_upsample_bicubic_2d.h  upsample_bicubic2d.cpp  upsample_bicubic2d.h
image/upsample_bicubic2d/op_kernel/: upsample_bicubic2d.cpp  upsample_bicubic2d.h  upsample_bicubic2d_310p.h  upsample_bicubic2d_apt.cpp
image/upsample_bicubic2d/op_kernel/arch35/: upsample_bicubic2d_simt.h  upsample_bicubic2d_tiling_data.h  upsample_bicubic2d_tiling_key.h
image/upsample_bicubic2d/tests/: CMakeLists.txt
image/upsample_bicubic2d/tests/st/aclnnUpsampleBicubic2d/: atk_aclnnUpsampleBicubic2d.json  executor_aclnnUpsampleBicubic2d.py
image/upsample_bicubic2d/tests/ut/op_graph/: CMakeLists.txt
image/upsample_bicubic2d/tests/ut/op_graph/fusion_pass/: CMakeLists.txt
image/upsample_bicubic2d/tests/ut/op_host/: CMakeLists.txt  test_upsample_bicubic2d_tiling.cpp
image/upsample_bicubic2d/tests/ut/op_host/arch35/: test_upsample_bicubic2d_tiling.cpp
image/upsample_bicubic2d/tests/ut/op_host/op_api/: CMakeLists.txt  aclnnUpsampleBicubic2d.py  test_aclnn_upsample_bicubic_2d.cpp
image/upsample_bicubic2d/tests/ut/op_kernel/: CMakeLists.txt  __init__.py  test_upsample_bicubic2d.cpp  upsample_bicubic2d_tiling.h
image/upsample_bicubic2d/tests/ut/op_kernel/upsample_bicubic2d_data/: compare_data.py  gen_data.py
objdetect/: CMakeLists.txt
objdetect/mrgba_custom/tests/ut/op_kernel/: CMakeLists.txt  test_mrgba_custom.cpp  test_mrgba_custom.h
objdetect/mrgba_custom/tests/ut/op_kernel/mrgba_custom_data/: gen_data.py
tests/ut/: CMakeLists.txt  empty.cpp
tests/ut/common/: any_value.h  infershape_case_executor.cpp  infershape_case_executor.h  infershape_context_faker.cpp  infershape_context_faker.h  tiling_case_executor.cpp  tiling_case_executor.h  tiling_context_faker.cpp  tiling_context_faker.h
tests/ut/op_api/: CMakeLists.txt  test_op_api_main.cpp
tests/ut/op_api/op_api_ut_common/inc/: CMakeLists.txt
tests/ut/op_api/op_api_ut_common/inc/op_api_ut_common/: op_api_ut.h  tensor_desc.h  tuple_utils.h
tests/ut/op_api/op_api_ut_common/src/: CMakeLists.txt  array_desc.cpp  scalar_desc.cpp  tensor_desc.cpp
tests/ut/op_api/op_api_ut_common/src/inner/: c_py.cpp  rts_interface.cpp  string_utils.cpp
tests/ut/op_api/stub/opdev/: make_op_executor.h  platform.cpp  platform.h
tests/ut/op_host/: CMakeLists.txt  test_op_host_main.cpp
tests/ut/op_kernel/: CMakeLists.txt  data_utils.cpp  test_op_kernel_main.cpp
tests/ut/op_kernel/scripts/: gen_tiling_head_file.py  gen_tiling_head_file.sh
tests/ut/op_kernel_aicpu/: CMakeLists.txt
tests/ut/op_kernel_aicpu/utils/: aicpu_read_file.cpp  aicpu_read_file.h  aicpu_test_utils.h
(+2246 files in other folders)
